kubernetes/2_ckad/katas/project_1_dummy/ingress-wear-watch-domain-rule-def.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ingress-wear-watch
spec:
  rules:
  - host: wear.my-online-store.com
    http:
      paths:
      - backend:
          service:
            name: wear-service
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: watch.my-onoine-store.com
    http:
      paths:
      - backend:
          service:
            name: watch-service
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
